fixed z-index news issue

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,8 @@ html {
 html.lenis,
 html.lenis body {
   height: auto;
+  position: relative;
+  z-index: -2;
 }
 
 .lenis.lenis-smooth {
